--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container opacity mt-2" style="width: 600px">
   <div class="card border-white p-5">
-    <div class="text-center p-3">
+    <div class="text-center p-3 mt-5">
     <h2>🤿 Edit <%= resource_name.to_s.humanize %></h2>
     </div>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
