--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -18,21 +18,31 @@
   <div class="mt-3 ms-3">
     <%= link_to "Back", :back, class: "btn btn-secondary" %>
   </div>
-<div class="container d-flex">
-  <div class="filters">
+<div class="d-flex ms-5">
+  <div>
     <strong>
     <p>Category</p>
-    <div class="d-flex">
-    <%= link_to "Course", pro_path(@pro, category:"Course", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Course"} "%>
-    <%= link_to "Fun Dive", pro_path(@pro, category:"Fun Dive", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Fun Dive"}" %>
-    <%= link_to "Specialty Training", pro_path(@pro, category:"Specialty Training", level: params[:level]), class: "btn btn-success #{"active" if params[:category] == "Specialty Training"}" %>
+    <div class="mb-3">
+      <%= link_to "Course", pro_path(@pro, category:"Course", level: params[:level], query: params[:query]), class: "btn btn-success #{"active" if params[:category] == "Course"} "%>
+      <%= link_to "Fun Dive", pro_path(@pro, category:"Fun Dive", level: params[:level], query: params[:query]), class: "btn btn-success #{"active" if params[:category] == "Fun Dive"}" %>
+      <%= link_to "Specialty Training", pro_path(@pro, category:"Specialty Training", level: params[:level], query: params[:query]), class: "btn btn-success #{"active" if params[:category] == "Specialty Training"}" %>
     </div>
     <p>Level</p>
-    <div class="d-flex">
-    <%= link_to "Beginner", pro_path(@pro, level:"Beginner", category: params[:category]), class: "btn btn-success #{"active" if params[:level] == "Beginner"}" %>
-    <%= link_to "Advanced", pro_path(@pro, level:"Advanced", category: params[:category]), class: "btn btn-success #{"active" if params[:level] == "Advanced"}" %>
+    <div class="d-flex mb-3">
+      <%= link_to "Beginner", pro_path(@pro, level:"Beginner", category: params[:category], query: params[:query]), class: "btn btn-success #{"active" if params[:level] == "Beginner"}" %>
+      <%= link_to "Advanced", pro_path(@pro, level:"Advanced", category: params[:category], query: params[:query]), class: "btn btn-success #{"active" if params[:level] == "Advanced"}" %>
     </div>
     <p>Price</p>
+    <%= form_tag pro_path(@pro), method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "max price"
+      %>
+      <%= hidden_field_tag :category, params[:category] %>
+      <%= hidden_field_tag :level, params[:level] %>
+      <%= submit_tag "Search", class: "btn btn-success" %>
+    <% end %>
     </strong>
   </div>
   <div class="offers">
