--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,19 +37,27 @@
 
             <% if current_user.pro?  %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Messages (<%= current_user.how_many_mail %>)", messages_path, class: "dropdown-item" %>
+              <% if current_user.gotmail? %>
+                <%= link_to "Messages", messages_path, class: "dropdown-item" %> <p><%= current_user.how_many_mail %></p>
+              <% end %>
+
               <%= link_to "Add a new offer", new_offer_path, class: "dropdown-item" %>
               <%= link_to "Edit profile", edit_user_registration_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
             <%else  %>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <% if current_user.gotmail? %>
+                  <div class="dropdown-item">
+                    <%= link_to "Messages", messages_path %> (<%= current_user.how_many_mail %>)</p>
+                  </div>
+                <% end %>
                 <%= link_to "Edit profile", edit_user_registration_path, class: "dropdown-item" %>
                 <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
               </div>
             <%end  %>
           </li>
-          <% if current_user.gotmail? %>
+            <% if current_user.gotmail? %>
               <li class="btn-mail">
                 <%= current_user.how_many_mail %>
               </li>
