--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -13,9 +13,6 @@
   </div>
 </div>
 
-  <%# </div>
-</div> %>
-
 <div class="d-flex w-100 align-items-start">
   <div class="w-75 p-5">
     <div class="d-flex justify-content-between infos-bookings">
@@ -61,47 +58,46 @@
         <p><%= @booking.offer.prerequisites %></p>
         <h5><u>Included:</u></h5>
         <p><%= @booking.offer.included %></p>
+        <h5><u>Contact:</u></h5>
+        <h6>Teacher:</h6>
+        <p><%= @booking.offer.user.email %></p>
+        <h5><u>Booker:</u></h5>
+        <p><%= @booking.user.email %></p>
     </div>
+
   <div class="validate-banner w-25 p-5 white shadow p-3 mx-5 bg-white rounded" style="margin-top: -70px; position: sticky; top: 100px;">
     <div class="mt-3 justify-content-between">
-      <h4>Contact:</h4>
-      <h6>Teacher:</h6>
-      <p><%= @booking.offer.user.email %></p>
-      <h4>Booker:</h4>
-      <p><%= @booking.user.email %></p>
+          <% if @booking.methods.include?(:messages) %>
+      <div class="container mt-5">
+        <h1 id="messenger">Messagerie:</h1>
+        <div class="messages">
+          <% @booking.messages.each do |message| %>
+            <div id="message-<%= message.id %>">
+              <small>
+                <strong><%= message.user.first_name %></strong>
+                <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
+                <% unless message.read  %>
+                  <i> (unread) </i>
+                <% end %>
+              </small>
+              <p><%= message.content %></p>
+            </div>
+          <% end %>
+          <%= simple_form_for [@booking, @message],
+            html: {class: "d-flex"} do |f|
+            %>
+            <%= f.input :content,
+                        label: false,
+                        placeholder: "Coucou",
+                        wrapper_html: {class: "flex-grow-1"}
+                        %>
+            <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
     </div>
   </div>
 </div>
-
-<% if @booking.methods.include?(:messages) %>
-  <div class="container mt-5">
-    <h1 id="messenger">Messagerie:</h1>
-    <div class="messages">
-      <% @booking.messages.each do |message| %>
-        <div id="message-<%= message.id %>">
-          <small>
-            <strong><%= message.user.first_name %></strong>
-            <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
-            <% unless message.read  %>
-              <i> (unread) </i>
-            <% end %>
-          </small>
-          <p><%= message.content %></p>
-        </div>
-      <% end %>
-      <%= simple_form_for [@booking, @message],
-        html: {class: "d-flex"} do |f|
-        %>
-        <%= f.input :content,
-                    label: false,
-                    placeholder: "Coucou",
-                    wrapper_html: {class: "flex-grow-1"}
-                    %>
-        <%= f.submit "Send", class: "btn btn-primary mb-3" %>
-      <% end %>
-    </div>
-  </div>
-<% end %>
-
 <%# modèle à adapter ->  %>
 <%# <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
