--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #FFA711;
-$green: #1EDD88;
+$green: #59cd90;
 $gray: #343a40;
 $light-gray: #F4F4F4;
 $deep_blue: #01123C;
